--- a/css/styles.css
+++ b/css/styles.css
@@ -444,6 +444,10 @@ margin: 0 auto;}
     border: 1px solid #fff;
     border-radius: 4px;
     background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
     width: 264px;
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
@@ -460,20 +464,22 @@ margin: 0 auto;}
 
 .footer-subscribe-btn { 
 border-radius: 4px;
-background: #4d5ae5;
+background-color: #4d5ae5;
 border: none;
 padding: 8px 24px;
-width: 165px;
+min-width: 165px;
 height: 40px; 
+font-family: "Roboto", sans-serif;
+font-weight: 500;
 font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.04em;
 text-align: center;
 color: #fff;
+cursor: pointer;
 display: flex;
 align-items: center;
 justify-content: center;
-gap: 16px;
 margin-left: 24px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -487,12 +493,14 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: white;
     width: 24px;
     height: 24px;
+    margin-left: 16px;
 }
 
 .footer-form {
     display: flex;
     align-items: center;
     justify-content: center;
+   
   
 }
 
@@ -507,6 +515,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -522,10 +531,11 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -533,31 +543,35 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     stroke: rgba(0, 0, 0, 0.1);
     width: 24px;
     height: 24px;
-    border-radius: 100%;
+    border-radius: 50%;
     background-color: #e7e9fc;
-    border: none;
-    padding: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
     display: flex;
     margin-left: auto;
     align-items: center;
     justify-content: center;
-    position: relative;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: absolute;
+    top: 24px;
+    right: 24px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-close-btn {
-    position: absolute;
     fill: #2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
-    background-color: #4D5AE5;
+    background-color: #404bbf;
 }
 
-.icon-close-btn:hover,
+.icon-close-btn:hover, 
 .icon-close-btn:focus {
-    fill: white;
+    fill: #ffffff;
 }
 
 .modal-title {
@@ -567,7 +581,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-top: 24px;
     margin-bottom: 16px; 
 }
 
@@ -605,19 +618,25 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon {
-    fill: #2E2F42;
     position: absolute;
     left: 16px;
-    bottom: 50%;
-    transform: translateY(50%);
+    top: 50%;
+    transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:hover + .modal-icon {
+.modal-input:focus + .modal-icon {
     fill: #4d5ae5;
+}
+.comment-part {
+    margin-bottom: 16px
 }
     
 .modal-textarea {
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     resize: none;
     width: 100%;
     height: 120px;
@@ -629,14 +648,22 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea:hover {
-    border-color: #4d5ae5;
+.modal-textarea:focus {
+    border-color: #4D5AE5;
 }
+
 .modal-textarea::placeholder {
     font-size: 12px;
     line-height: 117%;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
+}
+
+.checkbox-part {
+    margin-bottom: 24px;
+}
+.modal-check-item {
+
 }
 
 .policy-color {
@@ -648,7 +675,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .send-btn {
     border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
@@ -661,6 +688,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: none;
     display: block;
     margin: 0 auto;
+    cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -670,12 +698,14 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  
 .modal-check-text {
+    height: 16px;
     font-size: 12px;
     line-height: 117%;
     letter-spacing: 0.04em;
     color: #8e8f99;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .modal-check-text span {
@@ -684,12 +714,11 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     margin-right: 8px;
-    margin-top: 16px;
-    margin-bottom: 24px;
-   
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check:checked + .modal-check-text span {
