--- a/css/styles.css
+++ b/css/styles.css
@@ -480,7 +480,6 @@ cursor: pointer;
 display: flex;
 align-items: center;
 justify-content: center;
-margin-left: 24px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -500,8 +499,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     align-items: center;
     justify-content: center;
-   
-  
+    gap: 24px;  
 }
 
 .backdrop {
@@ -567,9 +565,18 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-close-btn:hover,
 .modal-close-btn:focus {
     background-color: #404bbf;
+    border: none;
 }
 
-.icon-close-btn:hover, 
+.modal-close-btn:hover +.icon-close-btn {
+    fill: #ffffff;
+}
+
+.modal-close-btn:focus + .icon-close-btn {
+    fill: #ffffff;
+}
+
+.icon-close-btn:hover,
 .icon-close-btn:focus {
     fill: #ffffff;
 }
@@ -703,9 +710,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     line-height: 117%;
     letter-spacing: 0.04em;
     color: #8e8f99;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .modal-check-text span {
