--- a/css/styles.css
+++ b/css/styles.css
@@ -558,7 +558,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-close-btn {
-    fill: #2E2F42;
+    
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -566,11 +566,16 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-close-btn:focus {
     background-color: #404bbf;
     border: none;
+}
+.icon-close-btn:hover,
+.icon-close-btn:focus {
     fill: #ffffff;
 }
 
-.icon-close-btn:hover,
-.icon-close-btn:focus {
+.icon-close-btn:hover + .icon-close-btn {
+    fill: #ffffff; }
+
+.icon-close-btn:focus + .icon-close-btn {
     fill: #ffffff;
 }
 
