--- a/css/styles.css
+++ b/css/styles.css
@@ -572,10 +572,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: #ffffff;
 }
 
-.icon-close-btn:hover + .icon-close-btn {
+.modal-close-btn:hover + .icon-close-btn {
     fill: #ffffff; }
 
-.icon-close-btn:focus + .icon-close-btn {
+.modal-close-btn:focus + .icon-close-btn {
     fill: #ffffff;
 }
 
