--- a/css/styles.css
+++ b/css/styles.css
@@ -567,15 +567,11 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #404bbf;
     border: none;
 }
-.icon-close-btn:hover,
-.icon-close-btn:focus {
-    fill: #ffffff;
-}
 
-.modal-close-btn:hover + .icon-close-btn {
+.modal-close-btn:hover .icon-close-btn {
     fill: #ffffff; }
 
-.modal-close-btn:focus + .icon-close-btn {
+.modal-close-btn:focus .icon-close-btn {
     fill: #ffffff;
 }
 
